--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -1,3 +1,4 @@
 
 # Created to have some global configurations outside the tests, here you can add some configurations like URL passwords and server types to run the tests. Only one yet is the URL
 TEST_TARGET_URL=https://www.google.com
+TEST_API_TARGET_URL=https://petstore.swagger.io/v2
